--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit~=1.39.0
-pandas~=2.0.3
-plotly~=5.14.1
+streamlit~=1.49.0
+pandas~=2.3.2
+plotly~=6.3.0
 openpyxl~=3.1.5
 xlrd~=2.0.1
-sqlalchemy~=2.0.41
-psycopg2~=2.9.10
+sqlalchemy~=2.0.43
+psycopg2-binary~=12.9.10
